<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/contentView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/settings_1"
            android:textColor="#FFF"
            android:textSize="21dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/change_theme_1"
                android:textColor="#000"
                android:textSize="21dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:background="#ccc"
                android:padding="1dp">

                <Spinner
                    android:id="@+id/list_theme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:background="#eee"
                    android:entries="@array/theme_arrays"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    />
            </LinearLayout>

            <Button
                android:id="@+id/save_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_1"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"

                android:textColor="#FFF"
                android:background="@color/colorPrimaryDark"/>

        </LinearLayout>
    </LinearLayout>


</LinearLayout>