<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EBEFF6">

    <LinearLayout
        android:id="@+id/contentView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorPrimaryDark"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_weight="0.85"
                android:text="@string/app_name"
                android:textColor="@color/White"
                android:textSize="21dp" />

            <ImageButton
                android:id="@+id/favorites_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="6dp"
                android:layout_weight="0.15"
                android:background="@color/colorTransparent"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/hearts" />

            <ImageButton
                android:id="@+id/settingsBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="6dp"
                android:layout_weight="0.15"
                android:background="@color/colorTransparent"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/list" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp">

            <LinearLayout
                android:id="@+id/center_bar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_55sdp"
                android:background="@drawable/main_topbar"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.3"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/select_language"
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:padding="3dp"
                        android:spinnerMode="dropdown"
                        android:textAlignment="center" />

                    <ImageView
                        android:layout_width="@dimen/_12sdp"
                        android:layout_height="@dimen/_12sdp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_down_arrow"
                        app:tint="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/imagVieSwitchLanguage"
                        android:layout_width="@dimen/_22sdp"
                        android:layout_height="@dimen/_22sdp"
                        android:adjustViewBounds="true"
                        android:src="@drawable/ic_transfer"
                        app:tint="@color/white" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.3"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/final_language"
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:padding="3dp"
                        android:spinnerMode="dropdown"
                        android:textAlignment="center" />

                    <ImageView
                        android:layout_width="@dimen/_12sdp"
                        android:layout_height="@dimen/_12sdp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_down_arrow"
                        app:tint="@color/white" />
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_weight="1">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="@dimen/_15sdp"
                app:cardElevation="0dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/voiceInput"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_above="@id/view"
                        android:background="@color/colorTransparent"
                        android:gravity="center"
                        android:hint="@string/enter_text_1"
                        android:padding="5dp" />

                    <View
                        android:id="@+id/view"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:layout_above="@id/bottom"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:background="#D3D3D3" />

                    <RelativeLayout
                        android:id="@+id/bottom"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_alignParentBottom="true"
                        android:paddingHorizontal="@dimen/_10sdp">

                        <ImageView
                            android:id="@+id/btnSpeak"
                            android:layout_width="@dimen/_21sdp"
                            android:layout_height="@dimen/_21sdp"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:src="@drawable/ic_mic"
                            app:tint="@color/_5898f6" />

                        <ImageView
                            android:id="@+id/imageViewClear"
                            android:layout_width="@dimen/_22sdp"
                            android:layout_height="@dimen/_22sdp"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:layout_toRightOf="@id/btnSpeak"
                            android:adjustViewBounds="true"
                            android:src="@drawable/ic_delete"
                            app:tint="@color/_5898f6" />

                        <ImageView
                            android:id="@+id/webTranslation"
                            android:layout_width="@dimen/_22sdp"
                            android:layout_height="@dimen/_22sdp"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:layout_toRightOf="@id/imageViewClear"
                            android:adjustViewBounds="true"
                            android:src="@drawable/ic_web"
                            app:tint="@color/_5898f6" />


                        <TextView
                            android:id="@+id/btnTranslate"
                            android:layout_width="@dimen/_100sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:background="@drawable/btn_translate"
                            android:fontFamily="@font/montserrat_medium"
                            android:gravity="center"
                            android:text="Translate"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_13sdp" />
                    </RelativeLayout>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_5sdp"
            android:orientation="horizontal">

            <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ads:adSize="SMART_BANNER"
                ads:adUnitId="@string/ad_id_banner" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_weight="1">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="@dimen/_15sdp"
                app:cardElevation="0dp">

                <RelativeLayout
                    android:id="@+id/ll_output"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_above="@id/view1"
                        android:fillViewport="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/voiceOutput"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="10dp"
                                android:divider="@color/colorTransparent"
                                android:gravity="center"
                                android:hint="@string/traduccion_1"
                                android:textColor="@color/black"
                                android:textColorHint="@color/black"
                                android:textSize="17dp" />
                        </LinearLayout>
                    </ScrollView>

                    <View
                        android:id="@+id/view1"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:layout_above="@id/bottom1"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:background="#D3D3D3" />

                    <RelativeLayout
                        android:id="@+id/bottom1"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_alignParentBottom="true"
                        android:paddingHorizontal="@dimen/_10sdp">

                        <ImageView
                            android:id="@+id/imageViewCopy"
                            android:layout_width="@dimen/_21sdp"
                            android:layout_height="@dimen/_21sdp"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:src="@drawable/ic_copy"
                            app:tint="@color/_5898f6" />

                        <ImageView
                            android:id="@+id/imageViewSpeck"
                            android:layout_width="@dimen/_21sdp"
                            android:layout_height="@dimen/_21sdp"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:layout_toRightOf="@+id/imageViewCopy"
                            android:src="@drawable/ic_volume"
                            app:tint="@color/_5898f6" />

                        <ImageView
                            android:id="@+id/imageViewShare"
                            android:layout_width="@dimen/_21sdp"
                            android:layout_height="@dimen/_21sdp"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:layout_toRightOf="@id/imageViewSpeck"
                            android:src="@drawable/ic_share"
                            app:tint="@color/_5898f6" />

                        <ImageView
                            android:id="@+id/imageViewFacebookPost"
                            android:layout_width="@dimen/_21sdp"
                            android:layout_height="@dimen/_21sdp"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:layout_toRightOf="@id/imageViewShare"
                            android:src="@drawable/ic_fbs"
                            app:tint="@color/_5898f6" />

                        <ImageView
                            android:id="@+id/imageViewWhatsApp"
                            android:layout_width="@dimen/_21sdp"
                            android:layout_height="@dimen/_21sdp"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:layout_toRightOf="@id/imageViewFacebookPost"
                            android:src="@drawable/ic_wps"
                            app:tint="@color/_5898f6" />

                        <ImageView
                            android:id="@+id/imageViewMessager"
                            android:layout_width="@dimen/_21sdp"
                            android:layout_height="@dimen/_21sdp"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:layout_toRightOf="@id/imageViewWhatsApp"
                            android:src="@drawable/ic_msger"
                            app:tint="@color/_5898f6" />
                    </RelativeLayout>
                </RelativeLayout>

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:layout_marginTop="5dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/loveBtn"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginLeft="3dp"
                            android:layout_marginTop="-2dp"
                            android:layout_marginRight="3dp"
                            android:layout_marginBottom="3dp"
                            android:padding="5dp"
                            android:src="@drawable/like" />

                    </RelativeLayout>
                </FrameLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>


    <RelativeLayout
        android:id="@+id/guide1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/guide1en"
        android:visibility="gone">

        <Button
            android:id="@+id/hideTuto1"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="60dp"
            android:background="@drawable/button_background2"
            android:elevation="15dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/ok_1"
            android:textColor="@color/White"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/guide2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/guide2en"
        android:visibility="gone">

        <Button
            android:id="@+id/hideTuto2"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="150dp"
            android:background="@drawable/button_background2"
            android:elevation="15dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/its_ok_1"
            android:textColor="@color/White"
            android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>